# design_mode

./: README.md
chapter1/: CMakeLists.txt  main.cpp
chapter1/internal/: Operation.cpp  Operation.h  OperationAdd.cpp  OperationAdd.h  OperationDiv.cpp  OperationDiv.h  OperationFactory.cpp  OperationFactory.h  OperationMul.cpp  OperationMul.h  OperationSub.cpp  OperationSub.h
chapter2/: CMakeLists.txt  main.cpp
chapter2/internal/: Context.cpp  Context.h  Strategy.cpp  Strategy.h  StrategyA.cpp  StrategyA.h  StrategyB.cpp  StrategyB.h
